Update DB connection